--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap'>
+    <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap'>
     <title>LosTresViajeros</title>
   </head>
   <body>
